Update character-magic-subtheme make knackHeader have button type Update build-selection.component.css & html make builds look good, moved selected build text and will need to do the same for knacks and spells Update build-selection.component.ts to handle expand/collapse all functionality for builds Update character-subtheme-modal.component.ts prevent console error from being thrown when modal is first launched

--- a/src/app/character-sheet/character-subtheme-modal/character-magic-subtheme/spell-selection/build-selection/build-selection.component.css
+++ b/src/app/character-sheet/character-subtheme-modal/character-magic-subtheme/spell-selection/build-selection/build-selection.component.css
@@ -9,3 +9,14 @@
 .aLittleOffTheTop {
   margin-top: -10px;
 }
+
+.selectedBuildDiv {
+  margin-bottom: 3px;
+  margin-top: -3px;
+  color: white;
+  font-weight: 500;
+}
+
+#displayBuildButton {
+  margin-left: 10px;
+}
